feat: add OZ deps, mainnet fork config, Xverse sats-connect, fix frontend SSR
- OpenZeppelin Cairo contracts v1.0.0 dependency
- Mainnet fork config in Scarb.toml (Blast API)
- sats-connect for Xverse wallet integration
- Fix frontend build with dynamic imports (SSR)
- Updated contract addresses (WBTC, Vesu V2)

--- a/Scarb.toml
+++ b/Scarb.toml
@@ -7,6 +7,7 @@ edition = "2024_07"
 
 [dependencies]
 starknet = "2.15.0"
+openzeppelin_token = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v1.0.0" }
 
 [dev-dependencies]
 snforge_std = "0.56.0"
@@ -27,6 +28,11 @@ allow-prebuilt-plugins = ["snforge_std"]
 # exit_first = true                                          # Stop tests execution immediately upon the first failure
 # fuzzer_runs = 1234                                         # Number of runs of the random fuzzer
 # fuzzer_seed = 1111                                         # Seed for the random fuzzer
+
+[[tool.snforge.fork]]
+name = "MAINNET_FORK"
+url = "https://starknet-mainnet.public.blastapi.io"
+block_id.tag = "latest"
 
 # [[tool.snforge.fork]]                                      # Used for fork testing
 # name = "SOME_NAME"                                         # Fork name
