--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sats-connect": "^4.2.1",
     "starknet": "^9.2.1"
   },
   "devDependencies": {
