feat(frontend): connect to live devnet contracts
- Use real AgentVault + ProofRegistry ABIs from compiled Cairo contracts
- Wire useAgentVault hook to call get_agent_state/get_action with proper parsing
- Add useProofRegistry hook for proof history from ProofRegistry contract
- ConstraintsEditor now calls update_constraints on-chain via devnet account
- AgentStatus shows real proof count from ProofRegistry
- All components gracefully fall back to mock data when devnet is unavailable
- Configurable RPC via NEXT_PUBLIC_STARKNET_RPC env var
- Updated contract addresses to deployed devnet instances
- npm run build passes cleanly

--- a/snfoundry.toml
+++ b/snfoundry.toml
@@ -1,11 +1,14 @@
 # Visit https://foundry-rs.github.io/starknet-foundry/appendix/snfoundry-toml.html
 # and https://foundry-rs.github.io/starknet-foundry/projects/configuration.html for more information
 
-# [sncast.default]                                         # Define a profile name
-# url = "https://api.zan.top/public/starknet-sepolia/rpc/v0_10" # Url of the RPC provider
-# accounts-file = "../account-file"                        # Path to the file with the account data
-# account = "mainuser"                                     # Account from `accounts_file` or default account file that will be used for the transactions
-# keystore = "~/keystore"                                  # Path to the keystore file
-# wait-params = { timeout = 300, retry-interval = 10 }     # Wait for submitted transaction parameters
-# block-explorer = "StarkScan"                             # Block explorer service used to display links to transaction details
-# show-explorer-links = true                               # Print links pointing to pages with transaction details in the chosen block explorer
+[sncast.sepolia]
+url = "https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_7/demo"
+accounts-file = "~/.starknet_accounts/starknet_open_zeppelin_accounts.json"
+account = "deployer"
+wait-params = { timeout = 300, retry-interval = 10 }
+block-explorer = "StarkScan"
+show-explorer-links = true
+
+[sncast.devnet]
+url = "http://localhost:5050"
+account = "devnet-deployer"
